feat: Ignore and warn about unknown hints instead of throwing a fatal error (#2035)